update html content

--- a/index.html
+++ b/index.html
@@ -8,13 +8,53 @@
 
 <body>
         <div class="header">
-                <img src="images/Green.jpg">
+            <img class="logo" src="images/Green.png" width="100px">
+            
             <ul class="links">
-                <li a></li>
-                <li a></li>
-                <li a></li>
+                 <li a>Services</li>
+                 <li a>Reviews</li>
+                 <li a>Quote</li>
             </ul>
+
+            <div class="description">
+                <h1>This website is Gnarly</h1>
+                <p> This website has some subtext that goes here under the main title. smaller font and lower contrast</p>
+                <button> Sign Up</button>
+            </div>
+
+            <img class="banner" src="">
         </div>
+
+        <div class="tiles">
+            <h2>Some Random Information</h2>
+            <div class="infotile">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infotile">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infotile">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="infotile">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        
+        <div class="review">
+            <p>This is an inspiring review from a customer who left 5 stars because they loved the work done on their property</p>
+            <p>-reviewer name</p>
+        </div>
+
+        <div class="action">
+            <a> Call to action!</a>
+            <p>sign up for our product by clicking that button right over there</p>
+            <button>Sign Up</button>
+        </div>
+
+        <footer class="footer">
+            <a>Copyright "Cristians Creations 2021</a>
+        </footer>
 </body>
 
 </html>
