add style sheet and images along with html updates

--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Landscape Experts</title>
-    <link rel="stylesheet" href="/stylesheet/style.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 
 <body>
         <div class="header">
-            <img class="logo" src="images/Green.png" width="100px">
-            
+
+            <div class="top">
+            <div class="pic"> <img class="logo" src="images/Green.jpg" width="50px"> </div>
             <ul class="links">
                  <li a>Services</li>
                  <li a>Reviews</li>
                  <li a>Quote</li>
             </ul>
+           </div>
 
             <div class="description">
-                <h1>This website is Gnarly</h1>
-                <p> This website has some subtext that goes here under the main title. smaller font and lower contrast</p>
-                <button> Sign Up</button>
+               <div class="left">
+                    <h1>This website is Gnarly</h1>
+                    <p> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
+                    <button class="sign"> Sign Up</button>
+               </div>
+                <div class="right">
+                <img class="banner" src="images/garden1.jpg" width="400px">
+                </div>
             </div>
-
-            <img class="banner" src="">
         </div>
 
         <div class="tiles">
