Update stylesheet and html contents

--- a/index.html
+++ b/index.html
@@ -12,49 +12,60 @@
             <div class="top">
             <div class="pic"> <img class="logo" src="images/Green.jpg" width="50px"> </div>
             <ul class="links">
-                 <li a>Services</li>
-                 <li a>Reviews</li>
-                 <li a>Quote</li>
+
+                 <button class="sendtext">Reviews</button>
+                 <button class="quotebutton">Quote</button>
             </ul>
            </div>
 
             <div class="description">
                <div class="left">
-                    <h1>This website is Gnarly</h1>
-                    <p> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
+                    <h1>Wonderland Landscaping</h1>
+                    <hero> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</hero>
                     <button class="sign"> Sign Up</button>
                </div>
                 <div class="right">
-                <img class="banner" src="images/garden1.jpg" width="400px">
+                <img class="banner" src="images/garden1.jpg" width="300px">
                 </div>
             </div>
         </div>
 
         <div class="tiles">
-            <h2>Some Random Information</h2>
-            <div class="infotile">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="infotile">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="infotile">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="infotile">
-                <p>this is some subtext under an illustration or image</p>
+            <div class="randotitle">We've got your back</div>
+
+            <div class="tilecontainer">
+
+                <div class="infotile">
+                    <div> <img class="house" src="images/house.png" width="50px"> </div>
+                    <p>Locally Owned</p>
+                </div>
+                <div class="infotile">
+                    <div> <img class="house" src="images/heart.png" width="50px"> </div>
+                    <p>Family Owned</p>
+                </div>
+                <div class="infotile">
+                    <div> <img class="house" src="images/lightning.png" width="50px"> </div>
+                    <p>Emergency Services</p>
+                </div>
+                <div class="infotile">
+                    <div> <img class="house" src="images/lock.png" width="50px"> </div>
+                    <p>Insured</p>
+                </div>
             </div>
         </div>
-        
         <div class="review">
-            <p>This is an inspiring review from a customer who left 5 stars because they loved the work done on their property</p>
-            <p>-reviewer name</p>
+            <div class="quote">I honestly knew Wonderland Landscape would do an amazing job the second I saw them walk in. Like I really called it.</div>
+            <p class="name">-Lebron James</p>
         </div>
 
         <div class="action">
-            <a> Call to action!</a>
-            <p>sign up for our product by clicking that button right over there</p>
-            <button>Sign Up</button>
+            <div class="actioncontainer">
+                <div class="textact">
+                <a> Sign up a 15% off discount!</a>
+                <p class="text">Sign up for our newsletter for news and exclusive deals</p>
+                </div>
+                <button class="bottomsign">Sign Up</button>
+            </div>
         </div>
 
         <footer class="footer">
