Adjust logo and add more header links

--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
         <div class="header">
 
             <div class="top">
-            <div class="pic"> <img class="logo" src="images/Green.jpg" width="50px"> </div>
-            <ul class="links">
-
-                 <button class="sendtext">Reviews</button>
-                 <button class="quotebutton">Quote</button>
-            </ul>
+                    <div class="lefthead">
+                    <div class="pic"> <img class="logo" src="images/grass.jpg" width="50px"> </div>
+                    <ul class="llinks">
+                        <li>Home</li>
+                        <li>Services</li>
+                        <li>Galleries</li>
+                        <li>Reviews</li>
+                    </ul>
+                    </div>
+                    <ul class="links">
+                    
+                    <button class="sendtext">Reviews</button>
+                    <button class="quotebutton">Quote</button>
+                </ul>
            </div>
 
             <div class="description">
                <div class="left">
-                    <h1>Wonderland Landscaping</h1>
+                    <div class="heromain">Wonderland Landscaping</div>
                     <hero> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</hero>
                     <button class="sign"> Sign Up</button>
                </div>
@@ -69,7 +77,7 @@
         </div>
 
         <footer class="footer">
-            <a>Copyright "Cristians Creations 2021</a>
+            <div class="foottext">Copyright Cristians Creations 2021</div>
         </footer>
 </body>
 
