Changes to content and alignment

--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
                     <div class="lefthead">
                     <div class="pic"> <img class="logo" src="images/grass.jpg" width="50px"> </div>
                     <ul class="llinks">
-                        <li>Home</li>
-                        <li>Services</li>
-                        <li>Galleries</li>
-                        <li>Reviews</li>
+                        <li class="mainlink">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="mainlink"> 
+                            <a href="#">Services</a>
+                        </li>
+                        <li class="mainlink">
+                            <a href="#">Gallery</a>
+                        </li>
+                        <li class="mainlink">
+                            <a href="#">Reviews</a>
+                        </li>
                     </ul>
                     </div>
                     <ul class="links">
@@ -29,7 +37,7 @@
             <div class="description">
                <div class="left">
                     <div class="heromain">Wonderland Landscaping</div>
-                    <hero> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</hero>
+                    <p> This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
                     <button class="sign"> Sign Up</button>
                </div>
                 <div class="right">
@@ -69,7 +77,7 @@
         <div class="action">
             <div class="actioncontainer">
                 <div class="textact">
-                <a> Sign up a 15% off discount!</a>
+                <h2> Sign up a 15% off discount!</h2>
                 <p class="text">Sign up for our newsletter for news and exclusive deals</p>
                 </div>
                 <button class="bottomsign">Sign Up</button>
